# g4hp

./: .gitignore  CMakeLists.txt  Linkdef.h  ProcessG4HP.py  ProcessG4Inel.py  cleaning.sh  create_invxs.sh  create_yields.sh  g4hp.cc  g4hp_job.sh  g4inel_job.sh  setup_g4hp_cvmfs.sh  submit_g4_10_4_inel.sh  submit_g4_10_4_ppfx.sh
ana/: CreateInelXS.C  CreateInvXS.C  CreatePPFX.C  CreatePPFXHP.C  CreatePPFXInel.C  CreateYields.C  ExampleOfUsingFunctions.C  Makefile  functions.cxx
include/: HPAnalysis.hh  HPDetectorConstruction.hh  HPDetectorMessenger.hh  HPPrimaryGeneratorAction.hh  HPRunAction.hh  HPRunActionMessenger.hh  hptuple.h
macros/: hp_example.mac  hp_template.mac
misc/: create_inelppfx.sh  create_inelxs.sh  create_invxs.sh  create_yields.sh  submit_g4_10_4_inel.sh  submit_g4_10_4_ppfx.sh
scripts/: CreateInvXS.C  CreateYields.C  ProcessG4HP.py  g4hp_job.sh
src/: HPAnalysis.cc  HPDetectorConstruction.cc  HPDetectorMessenger.cc  HPEventAction.cc  HPPrimaryGeneratorAction.cc  HPRunAction.cc  HPRunActionMessenger.cc  HPStackingAction.cc  HPTrackingAction.cc  hptuple.cc
submit/: submit_g4_10_4_inel.sh
